--- a/playbooks/01_system.yml
+++ b/playbooks/01_system.yml
@@ -10,3 +10,7 @@
   tasks:
     - include_role: name=system
       when: install_system
+  handlers:
+    - name: Reload limits
+      command: sysctl -p
+      ignore_errors: yes
