[chore][deploy] Change password parameters to plaintext

--- a/create-user.yml
+++ b/create-user.yml
@@ -6,6 +6,7 @@
 - hosts:
     - all_nodes
   vars_files:
+    - ./group_vars/all/_shared.yml
     - ./group_vars/all/user_info
   tasks:
     - include_role: name=create_users
