--- a/playbooks/09_monitor_web.yml
+++ b/playbooks/09_monitor_web.yml
@@ -1,7 +1,7 @@
 ---
 
 #---------------------------------
-# 8. Install  grafana
+# 9. Install monitor web
 #---------------------------------
 
 - hosts:
