--- a/playbook.yml
+++ b/playbook.yml
@@ -67,3 +67,13 @@
   tasks:
     - include_role: name=process_exporter
       when: install_process_exporter
+
+#---------------------------------
+# 5. Install monitor web
+#---------------------------------
+- hosts:
+    - web
+  tasks:
+    - include_role: name=nginx
+      when: install_monitor_web
+
