--- a/container/docker-compose/docker-compose.yml
+++ b/container/docker-compose/docker-compose.yml
@@ -2,6 +2,7 @@
 version: '2.2'
 
 x-shared-environment: &shared-env
+  SERVER_LISTEN_HOST: 0.0.0.0
   SERVER_HOST: ${DINGO_HOST_IP}
   RAFT_HOST: ${DINGO_HOST_IP}
   COOR_RAFT_PEERS: ${DINGO_HOST_IP}:22101,${DINGO_HOST_IP}:22102,${DINGO_HOST_IP}:22103
