[chore][deploy] add sql metric to grafana

--- a/roles/grafana/defaults/main.yml
+++ b/roles/grafana/defaults/main.yml
@@ -30,3 +30,6 @@ dingo_store_dashboard_template: "dingo_metrics.json.j2"
 iostat_dashboard_title: "DingoIostat"
 iostat_dashboard_uid: "9l09q0qik"
 iostat_dashboard_template: "node_iostat.json.j2"
+sql_dashboard_template: "sqlmetric.json.j2"
+sql_dashboard_title: "sql_metrics"
+sql_dashboard_uid: "Bm4sOIfSz"
