--- a/container/docker-compose/docker-compose.single.yml
+++ b/container/docker-compose/docker-compose.single.yml
@@ -50,7 +50,7 @@ services:
       INDEX_SERVER_START_PORT: 21001
       INDEX_INSTANCE_START_ID: 1101
       <<: *shared-env
-  
+
   executor:
     image: dingodatabase/dingo:latest
     hostname: executor
@@ -61,11 +61,12 @@ services:
     networks:
       - dingo_net
     environment:
-       DINGO_ROLE: executor
-       DINGO_HOSTNAME: executor
-       DINGO_COORDINATORS: ${DINGO_HOST_IP}:22001
-       DINGO_MYSQL_COORDINATORS: ${DINGO_HOST_IP}:22001
-   
+      DINGO_ROLE: executor
+      DINGO_HOSTNAME: executor
+      DINGO_COORDINATORS: ${DINGO_HOST_IP}:22001
+      DINGO_MYSQL_COORDINATORS: ${DINGO_HOST_IP}:22001
+      <<: *shared-env
+
   proxy:
     image: dingodatabase/dingo:latest
     hostname: proxy
@@ -79,6 +80,7 @@ services:
       DINGO_ROLE: proxy
       DINGO_HOSTNAME: proxy
       DINGO_COORDINATORS: ${DINGO_HOST_IP}:22001
+      <<: *shared-env
 
 networks:
     dingo_net:
