[chore][deploy] Add olap config

--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -49,6 +49,10 @@ install_dingo: true
 install_dingo_basic_command: true
 install_dingo_update_configuration: true
 install_dingo_start_roles: true
+openldap_server_ip: localhost
+
+install_ldap: true
+openldap_server_rootpw: "123456"              # This is the password for admin for openldap
 
 #-----------------------------------------------------
 # 4.Install Dingo-store to Dingo home
