[chore][deploy] Add dingo-web start and stop shell

--- a/roles/dingo/tasks/02_update_configuration.yml
+++ b/roles/dingo/tasks/02_update_configuration.yml
@@ -2,9 +2,9 @@
 
 # for debugger to display variables
 - name: debug
-  debug: 
+  debug:
     msg:
-    - "Coordinator Exchange Connection: {{ dingo_coordinator_exchange_connection_list }}"
+      - "Coordinator Exchange Connection: {{ dingo_coordinator_exchange_connection_list }}"
 
 - name: "Generate dingo configuration files"
   template: src={{ item.src }} dest={{ item.dest }} owner={{ dingo_user }} group={{ dingo_group }} mode=0755
@@ -44,6 +44,14 @@
     - {
       src: "stop-all-component.sh.j2",
       dest: "{{ dingo_home }}/bin/stop-all-component.sh"
+    }
+    - {
+      src: "stop-executor-proxy.sh.j2",
+      dest: "{{ dingo_home }}/bin/stop-executor-proxy.sh"
+    }
+    - {
+      src: "stop-dingo-web.sh.j2",
+      dest: "{{ dingo_home }}/bin/stop-dingo-web.sh"
     }
     - {
       src: "executor.yaml.j2",
