[chore][deploy] Add license ID generate function

--- a/roles/dingo_store/tasks/02_update_configuration.yml
+++ b/roles/dingo_store/tasks/02_update_configuration.yml
@@ -29,7 +29,11 @@
     - {
       src: "gen_coor_list.sh.j2",
       dest: "{{ dingo_store_home }}/scripts/gen_coor_list.sh"
-     }
+    }
+    - {
+      src: "generate_id.sh.j2",
+      dest: "{{ dingo_store_home }}/scripts/generate_id.sh"
+    }
 
 - name: "Remove dingo logrotate file if exist"
   file: path="{{ item }}" state=absent
